SUBDIRS = bitmaps

worldsdir = $(datadir)/$(package)/worlds

EXAMPLES =  \
	autolab.cfg \
	autolab.world \
	beacons.inc \
	chatterbox.inc \
	everything.cfg \
	everything.world \
	map.inc \
	pioneer.inc \
	pucktarget.inc \
	sick.inc \
	simple.cfg \
	simple.world  \
	vfh.cfg \
	wavefront.cfg 

worlds_DATA = $(EXAMPLES)

EXTRA_DIST =  $(EXAMPLES)
