SUBDIRS = bitmaps wifi

worldsdir = $(prefix)/share/stage/worlds

EXAMPLES =  \
889_05.cfg \
889_05.world \
889.cfg \
889.world \
amcl-sonar.cfg \
audio.cfg \
audio.world \
autolab.cfg \
autolab.world \
beacons.inc \
chatterbox.inc \
everything.cfg \
everything.world \
fast.world \
map.inc \
mbicp.cfg \
mbicp.world \
nd.cfg \
objects.inc \
p3at.inc \
p3dx.inc \
pioneerBase.inc \
pioneer.inc \
pucktarget.inc \
puck.world \
roomba.inc \
sample-zoo.cfg \
sample-zoo.world \
sick.inc \
simple.cfg \
simple.world \
table.world \
test100.cfg \
test100.world \
test.cfg \
test.world \
trans-task.cfg \
trans-task.world \
ubot.inc \
vfh.cfg \
wavefront.cfg \
wavefront-remote.cfg \
wifi.cfg \
wifi.world

worlds_DATA = $(EXAMPLES)

EXTRA_DIST =  $(EXAMPLES)
