#
# Automake config to build the device models
#
# RTV 20021026
# $Id
#

AM_CPPFLAGS = 	-Wall -I$(top_builddir)/src  -I$(top_builddir)/replace @PLAYER_CPPFLAGS@ $(GUI_CPPFLAGS)

noinst_LIBRARIES = libstgmodels.a 

libstgmodels_a_SOURCES = \
                   bitmap.cc \
                   bitmap.hh \
                   box.cc \
                   box.hh \
                   bumperdevice.cc \
                   bumperdevice.hh \
                   fiducialfinderdevice.cc \
                   fiducialfinderdevice.hh \
                   gripperdevice.cc \
                   gripperdevice.hh \
                   image.cc \
                   image.hh \
                   laserdevice.cc \
                   laserdevice.hh \
		   omnipositiondevice.cc \
		   omnipositiondevice.hh \
                   positiondevice.cc \
                   positiondevice.hh \
                   powerdevice.cc \
                   powerdevice.hh \
                   ptzdevice.cc \
                   ptzdevice.hh \
                   puck.cc \
                   puck.hh \
                   sonardevice.cc \
                   sonardevice.hh \
                   truthdevice.cc \
                   truthdevice.hh \
                   visiondevice.cc \
                   visiondevice.hh \
                   mcomdevice.cc  mcomdevice.hh

# currently broken
# bpsdevice.cc 
# idardevice.cc
# idardevice.hh
# idarturretdevice.cc
# idarturretdevice.hh
# broadcastdevice.cc
# broadcastdevice.hh
